added some styling to landing page/ added photo to main

--- a/index.html
+++ b/index.html
@@ -8,29 +8,33 @@
 		<title>Ape Historian</title>
 
 		<!-- external CSS link -->
-		
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div class="wrapper">
-			<header>
-				<nav>
-					<ul class="navList">
-						<li class="navItem"><a class="navLink" href ="#">Home</a></li>
-						<li class="navItem"><a class="navLink" href ="#">Home</a></li>
-						<li class="navItem"><a class="navLink" href ="#">Home</a></li>
-						<li class="navItem"><a class="navLink" href ="#">Home</a></li>
-						<li class="navItem"><a class="navLink" href ="#">Home</a></li>
-					</ul>
-				</nav>
-			</header>
-			<section class="grid-1 flex">
-				<section>
-					<h1>This site summarises all GameStop Due Diligence and content</h1>
-					<p>I am Ape Historian, aka /u/elegant-remote6667, I have spent the last year following the GameStop saga. 
-					</p>
+			<section class="main">
+				<header>
+					<nav>
+						<ul class="navList flex">
+							<li class="navItem"><a class="navLink" href ="#">Home</a></li>
+							<li class="navItem"><a class="navLink" href ="#">Home</a></li>
+							<li class="navItem"><a class="navLink" href ="#">Home</a></li>
+							<li class="navItem"><a class="navLink" href ="#">Home</a></li>
+							<li class="navItem"><a class="navLink" href ="#">Home</a></li>
+						</ul>
+					</nav>
+				</header>
+				<section class="grid-1 flex">
+					<section>
+						<h1>This site summarises all GameStop Due Diligence and content in one place.</h1>
+						<p>I am Ape Historian, aka /u/elegant-remote6667, I have spent the last year following the GameStop saga. 
+						</p>
+					</section>
 				</section>
-			</section>
+			</section>	
 			<section class="statGrid flex">
 				<section>
 					<span class="stats">100M+</span>
@@ -41,7 +45,7 @@
 					<span>Memes Saved</span>
 				</section>
 				<section>
-					<span class="stats">230+k</span>
+					<span class="stats">230k+</span>
 					<span>Reddit Authors</span>
 				</section>
 				<section>
@@ -53,14 +57,19 @@
 					<span>News Articles</span>
 				</section>
 				<section>
-					<span class="stats">70+ Terabytes</span>
+					<span class="stats">70TB +</span>
 					<span>Supplemental Data</span>
 				</section>
 			</section>
-			<section>
-				<iframe src="" frameborder="0"></iframe>
-				<h2>"The Problem With Jon Strwart - "How Redditors Exposed the stock market"</h2>
-				<p>If you don't scroll past anywhere else - just listen to the video and see what the current stock market structure is really like for retail investors.</p>
+			<section class="grid-3 flex">
+				<section class="grid-3-iframe">
+					<iframe width="100%" height="100%" src="https://www.youtube.com/embed/bP74RBTE8kI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</section>
+				
+				<section>
+					<h2>"The Problem With Jon Stewart" - "How Redditors Exposed the stock market"</h2>
+					<p>If you don't scroll past anywhere else - just listen to the video and see what the current stock market structure is really like for retail investors.</p>
+				</section>
 			</section>
 			<section class="">
 				<p>This site is an attempt to collect all research that I have come across, all the "DD" (due diligence) surrounding GME (GameStop) and the discussions about <a href="">direct registration and discussions around market structure.</a></p>
