added photos and fourth section to main site

--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
 					<p>If you don't scroll past anywhere else - just listen to the video and see what the current stock market structure is really like for retail investors.</p>
 				</section>
 			</section>
-			<section class="">
-				<p>This site is an attempt to collect all research that I have come across, all the "DD" (due diligence) surrounding GME (GameStop) and the discussions about <a href="">direct registration and discussions around market structure.</a></p>
+			<section class="grid-4 flex">
 				<p>What started as an interest has turned into a MASSIVE data project that is growing at an exponential rate.</p>
-				<h3>For a quick introduction- <a href="">start here</a></h3>
+				<p>This site is an attempt to collect all research that I have come across, all the "DD" (due diligence) surrounding GME (GameStop) and the discussions about <a href="">direct registration and discussions around market structure.</a></p>
+				
+				<h3>For a quick introduction <a class="btn" href="">start here</a></h3>
 			</section>
 			<section class="resources flex">
+				<h4>Subreddits that have been analysed and preserved:</h4>
 				<ul>
 					<li><a href="reddit.com/r/Superstonk">Superstonk (Global across 140 countries)</a></li>
 					<li><a href="reddit.com/r/ddintogme">DDIntoGME (Global)</a></li>
